# kardashev

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/debug/: mod.rs
src/debug/chunk/: mod.rs
src/events/: mod.rs
src/input/: mod.rs
src/input/controllers/: camera_controller.rs  composite_controller.rs  debug_overlay_controller.rs  mod.rs
src/rendering/: mesh.rs  mod.rs  render_context.rs
src/rendering/camera/: mod.rs
src/rendering/shaders/: default.frag  default_text.frag  default_text.vert  fragment_shader.txt  mod.rs  vertex_shader.txt
src/rendering/text/: mod.rs
src/sdl2_utils/: mod.rs
src/world/: chunk.rs  chunk_mesh_manager.rs  mod.rs
