[package]
name = "kardashev"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf", "unsafe_textures"] }
gl = "0.13.0"
glam = "0.30.1"
noise = "0.8"
regex = "1.11.1"
tracing = "0.1"
tracing-subscriber = { version="0.3.19", default-features = false, features=["fmt", "env-filter"] }
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
